--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -105,6 +105,17 @@
   publisher={Elsevier}
 }
 
+@article{kruschke1992alcove,
+  title={ALCOVE: An exemplar-based connectionist model of category learning.},
+  author={Kruschke, John K},
+  journal={Psychological review},
+  volume={99},
+  number={1},
+  pages={22},
+  year={1992},
+  publisher={American Psychological Association}
+}
+
 @article{kurtz2015human,
   title={Human category learning: Toward a broader explanatory account},
   author={Kurtz, Kenneth J},
@@ -214,6 +225,17 @@
   year = {2011}
 }
 
+@article{robbins1964empirical,
+  title={The empirical Bayes approach to statistical decision problems},
+  author={Robbins, Herbert},
+  journal={The Annals of Mathematical Statistics},
+  volume={35},
+  number={1},
+  pages={1--20},
+  year={1964},
+  publisher={JSTOR}
+}
+
 @article{rosch1975cognitive,
   title={Cognitive representations of semantic categories.},
   author={Rosch, Eleanor},
@@ -299,6 +321,17 @@
   number={6},
   pages={837--845},
   year={1993},
+  publisher={Springer}
+}
+
+@article{vanpaemel2012using,
+  title={Using priors to formalize theory: Optimal attention and the generalized context model},
+  author={Vanpaemel, Wolf and Lee, Michael D},
+  journal={Psychonomic Bulletin \& Review},
+  volume={19},
+  number={6},
+  pages={1047--1056},
+  year={2012},
   publisher={Springer}
 }
 
