added representative samples for e1

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -443,6 +443,7 @@ Through comparison with the copy-and-tweak model, Figure \ref{fig:packer-loglike
 
 As noted in Experiments 1 and 2, we observed a great deal of individual differences in the types of categories generated. Within each condition, we observed tightly clustered and widely distributed categories, as well as row and column categories, and so forth. The simulations reported above serve to evaluate the models while considering the entire dataset, but a secondary goal of any formal account should be to provide some explanation of how different profiles of performance emerge. Many of the individual generation profiles we observed can be targeted within the PACKER framework, simply by tuning the model's parameters. In this section, we describe more specifically how the most frequently observed profile can be realized.
 
+In both Experiments 1 and 2, we commonly observed four 
 
 
 \nbcnote{manual description of how to get rows, columns, 4 corners, etc}
