--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -438,10 +438,15 @@ Through comparison with the copy-and-tweak model, Figure \ref{fig:packer-loglike
 
 
 \subsection{Individual Differences}
+\label{section:individual-diffs}
 
-As noted in Experiments 1 and 2, we observed a great deal of individual differences in the types of categories generated. Within each condition, we observed tightly clustered and widely distributed categories, as well as row and column categories, and so forth (see Figures \ref{fig:e1-samples} and \ref{fig:e2-samples}). The simulations reported above serve to evaluate the models while considering the entire dataset, but a secondary goal of any formal account should be to provide some explanation of how different profiles of performance emerge. Many of the individual generation profiles we observed can be targeted within the PACKER framework, simply by tuning the model's parameters. In this section, we describe more specifically how the most frequently observed profile can be realized.
+As noted in Experiments 1 and 2, we observed a great deal of individual differences in the types of categories generated. Within each condition, we observed tightly clustered and widely distributed categories, as well as row and column categories, and so forth (see Figures \ref{fig:e1-samples} and \ref{fig:e2-samples}). The simulations reported above serve to evaluate the models while considering the entire dataset, but a secondary goal of any formal account should be to provide some explanation of how different profiles of performance emerge. Many of the individual generation profiles we observed can be targeted within the PACKER framework, simply by tuning the model's parameters. In this section, we describe more specifically how the most frequently observed profiles can be realized.
 
-To begin, the common profiles among the `Cluster' category types (including the `Cluster' condition of Experiment 1 and both conditions from Experiment 2) corresponded to: (A) a tight cluster of examples, (B) `row'- and `column'-like categories (varying widely along one dimension but not the other), and (C) a `corners' arrangement with examples placed into disparate corners of the space. While the tight cluster configuration can be considered PACKER's default generation mode (as it maximizes within-class similarity), the `row' and `column' types can be produced by altering PACKER's attention weights, $w$ (see Equation \ref{eq:similarity}). Traditionally, these weights are thought to reflect the diagnostic value of each dimension towards classifying the known category members \citep{nosofsky1984choice,nosofsky1986attention,kruschke1992alcove}, but within a generation context the weights specify the importance of within- and between-class similarity along each dimension. For example, if 100\% of attention is allocated along the X-axis, similarity along the Y-axis no longer influences performance: Thus, PACKER will create categories that are more widely distributed along the \textit{Y}-axis, as within-class similarity is not counted along that dimension. Further, PACKER's generated categories will be more likely to overlap with known categories along the Y-axis, as, again, between-class similarity is not counted along that dimension. Thus, differentially weighting one dimension will result in the generation of row- or column-like categories that are more widely distributed along, and overlap with existing classes along, the ignored axis. See Figure \ref{fig:packer-attention} for a depiction of how attention influences PACKER's performance.
+By manual inspection, it is evident that the most common profiles of generation consist of: (A) a tightly-distributed `cluster' of examples, (B) `row'- and `column'-like arrangements (varying widely along one dimension but not the other), and (C) a `corners' arrangement with examples placed into disparate corners of the space. These four profiles are distinct in terms of the distribution of the generated category along each dimension: whereas the cluster profile is tightly distributed along both dimensions, the row and column profiles are tightly distributed along just one dimension. Finally, the corners profile is widely distributed along both dimensions.
+
+In the framework proposed by PACKER, the cluster and corners profiles arise based on different prioritization of within-class similarity versus between-class contrast, and the row and column profiles arise based on the prioritization of each dimension in the computation of similarity. For example, in the cluster profile, there is a high degree of within-class similarity along both dimensions, whereas in the corners profile there is minimal within-class similarity. Thus, PACKER's proposal is that these individual differences arise as a result of different priorities: While the tight cluster configuration can be considered PACKER's `default' mode (as it maximizes within-class similarity), the corners profile can be produced when between-class contrast is put at a higher priority (i.e., $\gamma = 0$).
+
+Likewise, in the row and column profiles, there is a high degree of within-class similarity along one dimension but not the other. These differences likely arise due to a differential focus on one dimension over another, and thus they can be produced by changes to PACKER's attention weights, $w$ (see Equation \ref{eq:similarity}). Traditionally, the attention weights in exemplar models are thought to reflect the diagnostic value of each dimension towards classifying the known category members \citep{nosofsky1984choice,nosofsky1986attention,kruschke1992alcove}, but within a generation context the weights specify the importance of within- and between-class similarity along each dimension. For example, if 100\% of attention is allocated along the X-axis, similarity along the Y-axis no longer influences performance: as a result, PACKER will create categories that are more widely distributed along the Y-axis, as similarity is not counted along that dimension. As a general principle, differentially weighting one dimension will result in the generation of categories that are more widely distributed along the ignored dimension, conforming to a row- or column-like arrangement. See Figure \ref{fig:packer-attention} for a depiction of how attention influences PACKER's performance. 
 
 \begin{figure}
     \begin{center}
@@ -449,14 +454,11 @@ To begin, the common profiles among the `Cluster' category types (including the 
     \caption{PACKER generation of a category `B' example, following exposure to one member of category `A' and one member of category `B'. Predictions are shown for different attention settings: \textit{(a)} Increased weighting of the X-axis. \textit{(b)} Increased weighting of the Y-axis. \textit{(c)} Uniform weighting (identical to Figure \ref{fig:packer-examples}).}
     \label{fig:packer-attention}
     \end{center}
-\end{figure}       
+\end{figure}
 
+Like in PACKER, changes to the weighting of the dimensions can also be used to produce row- and column-like categories in the copy-and-tweak and hierarchical sampling models. Indeed, as copy-and-tweak is simply a special case of the PACKER model, the attention weights operate exactly as described above. Within the hierarchical sampling model, the covariance matrix specifying the prior domain distribution, $\Sigma_0$, can be used to similar effect. This covariance matrix specifies the amount of variance assumed along each dimension (as well as the dimensional correlations) across the domain of categories. The covariance matrix for a newly generated category, $\Sigma_B$, is based on the assumed $\Sigma_0$ as well as the distributions of previously learned categories (see Appendix \ref{ap:hsampling-definition}). Thus, the importance of each feature can be coded into $\Sigma_0$ to alter the dimensional variance of generated categories.
 
-
-
-
-\nbcnote{If this is done correctly, we can motivate the use of attention weights below. }
-
+However, a key limitation within both in both of these models is the lack of interaction between the distributional structure of a category (in this case, a row-versus-column orientation) and the location of that category within the domain. While these models are \textit{capable} of generating row and column categories, there is no mechanism in place to ensure generated categories will be distinct from what is already known. In the section below, we explore the interdependence between distributional structure and location in creative generation.
 
 \subsection{Category Location vs. Distributional Structure}
 
@@ -488,9 +490,9 @@ These data reveal strong and consistent patterns across all the conditions we te
 
 These patterns of performance clearly depict the interdependence between the distributional structure and location of generated concepts. Our results can, in some sense, be interpreted in terms of local minimization of between-class similarity: by distributing the generated category away from members of the experimenter-defined category, participants may increase the degree of between-class distance without drastically altering the degree of within-class similarity.
 
-To attempt to explain our findings within the PACKER, copy-and-tweak- and hierarchical sampling models, we conducted simulations using an individual-differences approach. Each model was used to simulate each participant's generation separately, with the importance of each dimension set according to the relative range of the participant's generated category along each dimension. In the PACKER and copy-and-tweak models, the attention weights, $w$, specify the importance of each dimension in the computation of similarity. As noted above, attention is usually thought to reflect the diagnostic value of each dimension in classification. While there exist methods to find the optimal attention weighting scheme given a classification \citep[see][]{vanpaemel2012using}, for simplicity we may assume that the Alpha and Beta categories are distinct along dimensions that the Betas do not vary on. Thus, the weighting for a given participant can be computed as:
+To attempt to explain our findings within the PACKER, copy-and-tweak- and hierarchical sampling models, we conducted simulations using an individual-differences approach. As noted in Section \ref{section:individual-diffs}, row- and column-like categories can be produced by within model through changes to the weighting of each dimension. Given this information, we may use the models to simulate each participant's generation separately, with the importance of each dimension set according to the relative range of the participant's generated category along each dimension. 
 
-\nbcnote{Weak spot: attention weighting feels unmotivated.}
+In the PACKER and copy-and-tweak models, the attention weights, $w$, specify the importance of each dimension in the computation of similarity. While there exist methods to find the optimal attention weighting scheme given a classification \citep[see][]{vanpaemel2012using}, for simplicity we may assume that the Alpha and Beta categories are distinct along dimensions that the Betas do not vary on. Thus, the weighting for a given participant can be computed as:
 
 \begin{equation}
 w_k = \dfrac
@@ -499,9 +501,11 @@ w_k = \dfrac
 \label{eq:range-weight}
 \end{equation}
 % 
-where $\theta_w$ is a free parameter controlling how differences in range correspond to differences in weights (functioning similarity to the $\theta$ parameter in each of the models). In our simulations $\theta_w = 1.5$, though similar results can be obtained using a wide range of values. The resulting $w$ values are thus inversely proportional to the range of generated categories along each dimension, with less range corresponding to greater weighting.
+where $\theta_w$ is a free parameter controlling how differences in range correspond to differences in weights (functioning similarity to the $\theta$ parameter in each of the models), and $\text{range}(k)$ is the range of examples generated by the participant along dimension $k$. In our simulations $\theta_w = 1.5$, though similar results can be obtained using a wide range of values. The resulting $w$ values are thus inversely proportional to the range of generated categories along each dimension, with less range corresponding to greater weighting.
 
-In the hierarchical sampling model, the covariance matrix specifying the prior domain distribution, $\Sigma_0$, can be used to similar effect. This covariance matrix specifies the amount of variance assumed along each dimension (as well as the dimensional correlations) across the domain of categories. The covariance matrix for a newly generated category, $\Sigma_B$, is based on the assumed $\Sigma_0$ as well as the distributions of previously learned categories (see Appendix \ref{ap:hsampling-definition}). Thus, the importance of each feature can be coded into $\Sigma_0$ to alter the dimensional variance of generated categories. We incorporated the weights computed in Equation \ref{eq:range-weight} by setting the variance of each dimension according to: $\rho (1-w_k)n$, where $\rho$ is a free parameter specifying the overall assumed variance of the domain, and $n$ is the number of dimensions. Under this approach, evenly distributed weights correspond to an assumed variance of $\rho$. Likewise, larger values of $w$, which are produced when the generated category is tightly distributed along one dimension, correspond to smaller assumed variances. 
+In the hierarchical sampling model, the covariance matrix specifying the prior domain distribution, $\Sigma_0$, can be used to similar effect. This covariance matrix specifies the amount of variance assumed along each dimension (as well as the dimensional correlations) across the domain of categories. The covariance matrix for a newly generated category, $\Sigma_B$, is based on the assumed $\Sigma_0$ as well as the distributions of previously learned categories (see Appendix \ref{ap:hsampling-definition}). Thus, the importance of each feature can be coded into $\Sigma_0$ to alter the dimensional variance of generated categories. 
+
+Unlike the PACKER and copy-and-tweak models, the hierarchical sampling model's dimensional variances correspond to the assumed variance of generated categories along each dimension (rather than the inverse of the variance). Thus, a slight transformation is needed to incorporate the weights computed in Equation \ref{eq:range-weight}. For the hierarchical sampling model, we computed the dimensional variances according to: $\rho (1-w_k)n$, where $\rho$ is a free parameter specifying the overall assumed variance of the domain, and $n$ is the number of dimensions. Under this approach, evenly distributed weights correspond to an assumed variance of $\rho$. Likewise, larger values of $w$, which are produced when the generated category is tightly distributed along one dimension, correspond to smaller assumed variances. 
 
 \nbcnote{This works for 2D, but not 3D and beyond (as $1-w_k$ would not produce a valid weighting).}
 
